@@ -18,17 +18,19 @@ fn basic_encrypt() {
 }
 
 #[test]
-fn validate_aliases_for_encrypt_command() {
+fn infer_subcommand_name_for_encrypt_command() {
     utils::command::command()
         .arg("enc")
         .arg("-V")
         .assert()
-        .success();
+        .success()
+        .stdout(predicate::str::contains("abcrypt-encrypt"));
     utils::command::command()
         .arg("e")
         .arg("-V")
         .assert()
-        .success();
+        .success()
+        .stdout(predicate::str::contains("abcrypt-encrypt"));
 }
 
 #[test]
